<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/fragment_summary">

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="Überschrift"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="Start:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/personTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView8"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="person"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/TextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="Reisender:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="104dp"
        android:text="@string/summary_start"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/summary_intermediate"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/summary_end"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:text="@string/summary_distance"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"
        android:text="@string/summary_variable_costs"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:text="@string/summary_fix_costs"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:text="@string/summary_total_costs"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView0"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lala" />

    <TextView
        android:id="@+id/startTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView1"
        android:layout_alignEnd="@+id/dateTextView"
        android:text="lalala" />

    <TextView
        android:id="@+id/intermediateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lalalala" />

    <TextView
        android:id="@+id/goalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lalala" />

    <TextView
        android:id="@+id/kilometresTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lala" />

    <TextView
        android:id="@+id/variableCostsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lala" />

    <TextView
        android:id="@+id/fixCostsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView6"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lala" />

    <TextView
        android:id="@+id/totalCostsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView7"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="lala" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/headingTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="61dp"
        android:text="Speichern" />
</RelativeLayout>